<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_chat"
        android:title="Anonymous Chat"
        android:orderInCategory="40"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_erp"
        android:title="ERP"
        android:orderInCategory="45"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exam_cell"
        android:title="Exam Cell "
        android:orderInCategory="46"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_practical"
        android:title="Practical"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reviews"
        android:title="Reviews"
        android:orderInCategory="55"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notifications"
        android:title="Notifications: ON"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update"
        android:title="@string/menu_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

</menu>